--- a/coba.html
+++ b/coba.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Koneksi</title>
 </head>
 <body>
     <h1>Koneksi Komputer Lokal ke Repo    </h1>
+    <p>membuat koneksi komputer lokal</p>
 </body>
 </html>
